# byapi-unified-client

./: .env  .env.example  .gitignore  API_FUNCTIONS_REFERENCE.md  API_IMPLEMENTATION_COMPLETE.md  API_INTEGRATION_REPORT.md  API_QUICK_REFERENCE.md  CLAUDE.md  DAILY_LIMIT_IMPLEMENTATION.md  FINAL_SESSION_SUMMARY.md  IFLOW.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  README.md  SESSION_SUMMARY.md  TECHNICAL_DEBT_REPORT.md  byapi_availability_checker.py  byapi_client.py  byapi_client_optimized.py  byapi_client_simple.py  byapi_client_unified.py  byapi_config.py  byapi_decorators.py  byapi_exceptions.py  byapi_models.py  example_basic.py  optimization_proposal.md  pyproject.toml  pytest.ini  quick_start.md  quick_test_fixed.py  requirements-dev.txt  requirements.txt  simplified_optimization_proposal.md  test_601103_dates.py  test_all_api_interfaces.py  test_all_api_interfaces_improved.py  test_all_api_interfaces_with_logging.py  test_all_apis.py  (+8 more)
api_test_logs/: get_hscp_cwzb.json  get_hscp_gdbh.json  get_hscp_gsjj.json  get_hscp_jdlr.json  get_hscp_jdxj.json  get_hscp_jjcg.json  get_hscp_jjxs.json  get_hscp_jnfh.json  get_hscp_jnzf.json  get_hscp_ljds.json  get_hscp_ljgg.json  get_hscp_ljjj.json  get_hscp_ltgd.json  get_hscp_sdgd.json  get_hscp_sszs.json  get_hscp_yjyg.json  get_hslt_cxgc.json  get_hslt_dtgc.json  get_hslt_list.json  get_hslt_new.json  get_hslt_qsgc.json  get_hslt_zbgc.json  get_hslt_ztgc.json  get_hsrl_ssjy.json  get_hsrl_ssjy_more.json  get_hsrl_zbjy.json  get_hsstock_financial_balance.json  get_hsstock_financial_cashflow.json  get_hsstock_financial_income.json  get_hsstock_financial_pershareindex.json  get_hsstock_history.json  get_hsstock_history_transaction.json  get_hsstock_indicators.json  get_hsstock_instrument.json  get_hsstock_latest.json  get_hsstock_real_five.json  get_hsstock_real_time.json  get_hsstock_stopprice_history.json  get_hszg_gg.json  get_hszg_list.json  (+2 more)
data/: api_documentation_20251026_175447.md  api_mapping.json  api_mapping_20251026_175447.py  byapi_info_all.md  byapi_new_updated.py  processed_api_data.json  scraped_content_final.txt
docs/: api_reference.md
examples/: all_categories_usage.py  basic_usage.py  enhanced_features_demo.py  license_failover.py
specs/001-unified-api-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-unified-api-interface/checklists/: requirements.md
specs/001-unified-api-interface/contracts/: byapi.openapi.yaml
tests/: conftest.py
tests/integration/: test_announcements.py  test_financials.py  test_indicators.py  test_license_failover.py  test_stock_prices.py
tests/unit/: test_docstrings.py  test_key_rotation.py
utils/: load_json_1by1.py  optimize_api_json.py  optimize_json_structure.py  process_api_json.py  read_api_info.py  scrape_and_analyze_optimized.py
